--- a/vignettes/mwe.Rmd
+++ b/vignettes/mwe.Rmd
@@ -17,6 +17,46 @@ In this vignette, we provide an example analysis starting with a correlation mat
 
 
 ## Step 1
+```{r}
+## Simulate Two Communities (100 nodes)
+
+# Simulate true corr matrix
+true1 = matrix(0, nrow = 100, ncol = 100)
+true1[1:20,1:20] = 0.5
+true1[21:30,21:30] = 0.5
+true1[1:20,21:30] =0.2
+true1[21:30, 1:20] = 0.2
+true1[1:30,1:30] = true1[1:30,1:30] + 0.5*diag(30)
+true1[31:100,31:100] = true1[31:100,31:100] + diag(70);
+heatmap.2(true1, Rowv = FALSE, Colv = FALSE, margins = c(6,12), col = jet.colors(100), 
+          trace = "none", labRow = FALSE, labCol = FALSE, key.title = "Color Key", 
+          keysize = 0.9, key.par = list(cex=0.5), key.xlab = "value", breaks=seq(0,1,0.01),
+          density.info = "none")
+
+# Simulate samples based on true corr matrix, and then calculate the sample corr matrix.
+nvars = 100
+nobs = 50
+R = chol(true1) # upper triangular
+Z_vec = rnorm(nvars * nobs)
+Z = matrix(Z_vec, nrow = 100)
+samples =  crossprod(R,Z) # can use crossprod
+samples = t(samples) # For each node (100 nodes in total), draw 50 samples.
+simu1 = cor(samples) # Get corr between nodes
+heatmap.2(simu1, Rowv = FALSE, Colv = FALSE, margins = c(6,12), col = jet.colors(100), 
+          trace = "none", labRow = FALSE, labCol = FALSE, key.title = "Color Key", 
+          keysize = 0.9, key.par = list(cex=0.5), key.xlab = "value", density.info = "none")
+
+# Shuffle the sample corr matrix
+shuffle_index = sample(1:100)
+simu1_shuf = simu1[shuffle_index, shuffle_index]
+heatmap.2(simu1_shuf, Rowv = FALSE, Colv = FALSE, margins = c(6,12), col = jet.colors(100), 
+          trace = "none", labRow = FALSE, labCol = FALSE, key.title = "Color Key", 
+          keysize = 0.9, key.par = list(cex=0.5), key.xlab = "value", density.info = "none")
+
+result = NICE_fast_cut(simu1_shuf, 0.2)
+save(result , file = "examples/nice.rds")
+save(corr, file = "examples/corr.rds")
+```
 
 ## Step 2: Identify significant connections between communities
 
@@ -95,10 +135,63 @@ connections = lapply(G.pairwise, KLtest, null = null,
                      true_dist = true_dist, a = 0.05)
 ```
 
+### Generate a dataframe of all community relationships: 
+### 1 if interconnected otherwise 0
+```{r}
+# transform list interconnection into a vector
+interResult = unlist(connections)
+# transform matrix of community pairs index into dataframe
+inRes = as.data.frame(pairs)
+colnames(inRes) = c('community_one', 'community_two')
+inRes$whether_interconnected = interResult
+```
+
+### plot adjacency matrix
+
+```{r}
+d = max(inRes$community_two)
+A.mat = matrix(0, nrow = d, ncol = d)
+diag(A.mat) = 1
+for(i in c(1:nrow(inRes))){
+  A.mat[inRes$community_one[i], inRes$community_two[i]] = 
+    inRes$whether_interconnected[i]
+  A.mat[inRes$community_two[i], inRes$community_one[i]] = 
+    inRes$whether_interconnected[i]
+}
+
+par(cex.main=0.8, par(mar = c(1, 2, 2, 6)))
+colors = rep(brewer.pal(9, "Blues"), each = 3)[1:17]
+plot.A.mat = A.mat + diag(rep(2, nrow(A.mat)))    # emphasize diagonal in plot
+adj.mat = heatmap.2(A.mat, dendrogram='none', Rowv=FALSE, Colv=FALSE, trace='none', 
+                    key = F, col = as.vector(colors), main = "Communities Interconnection", 
+                    colsep = 1:n, rowsep = 1:n, sepcolor = "grey", sepwidth=c(0.005,0.005))
+image.plot(legend.only=T, zlim=range(0,1), col=colors, legend.mar = 3, 
+           legend.shrink = 0.5, legend.width = 0.5, legend.cex = 0.3)
+```
+
 
 ## Step 3
 
+```{r}
+interCon = inRes[inRes$whether_interconnected == 1,]
+print(interCon)
+### Select two interconnected communities from dataframe interCon and detect
+### interconnected edges.
 
+kID1 = NICE$CID[4] # an example, 4 here means the 4th cluster in heatmap.
+kID2 = NICE$CID[5]
+nodes1 = which(NICE$Cindx == kID1)
+nodes2 = which(NICE$Cindx == kID2)
+nodecom = c(nodes1, nodes2)
+mat1 = data[nodes1, nodes1]
+mat2 = data[nodes2, nodes2]
+mat12 = data[nodecom, nodecom]
+inter12 = data[nodes1, nodes2]
 
+result3 = InterCon(mat1, mat2, mat12, inter12, 
+                   0.6, c(0.3, 0.5, 0.6, 0.8, 0.85, 0.9), nodes1, nodes2)
+print(result3)
+
+```
 
 
